# pico-tidbits

./: CMakeLists.txt  README.md
src/adc/: CMakeLists.txt  adc.c  adc.h  main.c
src/dht11/: CMakeLists.txt  dht11.c  dht11.h  main.c
src/dht11lcd/: CMakeLists.txt  main.c
src/hd44780/: CMakeLists.txt  hd44780.c  hd44780.h  main.c
src/pwm/: CMakeLists.txt  main.c  pwm.c  pwm.h
src/sim7080g/: CMakeLists.txt  main.c  sim7080g.c  sim7080g.h  sim7080g_cmd.c  sim7080g_cmd.h  sim7080g_core.c  sim7080g_core.h  sim7080g_http.c  sim7080g_http.h  sim7080g_network.c  sim7080g_network.h  sim7080g_ntp.c  sim7080g_ntp.h  sim7080g_sms.c  sim7080g_sms.h  sim7080g_ssl.c  sim7080g_ssl.h  sim7080g_tcpudp.c  sim7080g_tcpudp.h
src/uart_io/: CMakeLists.txt  main.c  uart_io.c  uart_io.h
src/uartio/: CMakeLists.txt  main.c  uartio.c  uartio.h
src/usb2uart/: CMakeLists.txt  main.c  usb2uart.c  usb2uart.h
src/ws2812/: CMakeLists.txt  main.c  ws2812.c  ws2812.h  ws2812.pio
